<resources>
    <string name="app_name">SecondBreakfast</string>
    <string name="number_apples"> </string>
    <string name="apple"> </string>
    <string name="sandwich"> </string>
    <string name="other"> </string>
    <string name="iniApple"></string>
    <string name="iniSandwich"></string>
    <string name="iniOther"></string>
    <string name="deadline">DEADLINE:</string>
    <string name="alarms">NO OF ALARMS:</string>
    <string name="save">SAVE</string>
    <string name="warning" />
</resources>
